UI: Fix .application-details__status-panel overlap on small screen
Fix position of the element with class .application-details__status-panel on < xxlarge devices.

--- a/ui/src/app/applications/components/application-details/application-details.scss
+++ b/ui/src/app/applications/components/application-details/application-details.scss
@@ -13,6 +13,9 @@ $header: 120px;
         left: $sidebar-width;
         right: 0;
         z-index: 3;
+        @media screen and (max-width: map-get($breakpoints, xxlarge)) {
+            top: 150px;
+        }
         @media screen and (max-width: map-get($breakpoints, xlarge)) {
             top: 150px;
         }
